cluster/infrastructure/kanidm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidm
  namespace: kanidm
spec:
  selector:
    app: kanidm
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
